objects/APTS_Stage_Product__c.object
<CustomObject>
    <description>Stage Product</description>
    <fields>
        <fullName>APTS_ABB_Global_ID__c</fullName>
        <description>ABB Global ID for Global Products.</description>
        <label>ABB Global ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <label>Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Alternate_Product_Code__c</fullName>
        <label>Alternate Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BU__c</fullName>
        <description>BU - Global Business Unit for a Global product, and Local business unit for a local product</description>
        <inlineHelpText>BU - Global Business Unit for a Global product, and Local business unit for a local product</inlineHelpText>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>LPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPCW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPWA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_CID__c</fullName>
        <label>CID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConfigurationType__c</fullName>
        <description>The product configuration type</description>
        <label>Configuration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standalone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Country_Code__c</fullName>
        <description>Country Code for Local Products.</description>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Country_Market_Type__c</fullName>
        <description>Country Market Availability Type - Global Products.</description>
        <label>Country Market Availability Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_EAN_Code__c</fullName>
        <description>Local EAN Code - Local Products and EAN Code - Global Products.</description>
        <inlineHelpText>Local EAN Code - Local Products and EAN Code - Global Products.</inlineHelpText>
        <label>EAN Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ERP_Id__c</fullName>
        <label>ERP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_GTV_Level__c</fullName>
        <label>GTV Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Global_Product_ID__c</fullName>
        <description>Global Product Id for Local Product</description>
        <label>Global Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Code_2__c</fullName>
        <description>Offering Tree Classification node ID 2 - Global Products.</description>
        <label>Code 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Product_Hierarchy__c</fullName>
        <description>Offering Tree Classification node ID 1 - Global Products.</description>
        <label>Product Hierarchy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Life_Cycle_Phase__c</fullName>
        <label>Life Cycle Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_MDF_Code__c</fullName>
        <description>Local MDF Code - Local Products and MDF Code- Global Products.</description>
        <inlineHelpText>Local MDF Code - Local Products and MDF Code- Global Products.</inlineHelpText>
        <label>MDF Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Offering_Tree_Classification_ID_1__c</fullName>
        <label>Offering Tree Classification node ID 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Offering_Tree_Classification_ID_2__c</fullName>
        <label>Offering Tree Classification node ID 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stage Product</relationshipLabel>
        <relationshipName>Stage_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_PG__c</fullName>
        <description>Local PG - Local Products and PG - Global Products.</description>
        <inlineHelpText>Local PG - Local Products and PG - Global Products.</inlineHelpText>
        <label>PG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductType__c</fullName>
        <description>Determines the Product Type</description>
        <label>ProductType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <description>Code</description>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_ID__c</fullName>
        <description>Local Product ID for Local Products Record Type and Product ID for Global Products Record Type.</description>
        <externalId>true</externalId>
        <label>Product ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_ID__c</fullName>
        <label>Product Line ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Type_ID__c</fullName>
        <description>Product Type ID - Global Products.</description>
        <label>Product Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Produt_Sales_Status__c</fullName>
        <label>Product Sales Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_RecordType__c</fullName>
        <description>RecordType</description>
        <label>RecordType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <label>Row Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sending_Country__c</fullName>
        <label>Sending Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_System_Id__c</fullName>
        <description>To be used in Local Products in order to create External Id</description>
        <label>System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <label>ERP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Product_ID__c</columns>
        <columns>APTS_Active__c</columns>
        <columns>APTS_Product_Line_ID__c</columns>
        <columns>APTS_RecordType__c</columns>
        <columns>APTS_Life_Cycle_Phase__c</columns>
        <columns>APTS_ProductType__c</columns>
        <columns>APTS_RowStatus__c</columns>
        <columns>APTS_Error_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>